--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 node_modules
 
 # Environment variables
-.env
+# .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-backend/.env
+# backend/.env
 
 # Logs
 logs
